# sns_prorject

./: .gitignore  README.md  pyproject.toml
src/accounts/: admin.py  forms.py  models.py  urls.py  views.py
src/accounts/migrations/: 0001_initial.py  0002_user_profile_image_alter_user_website_url.py  0003_alter_user_options_user_unique_in_store.py
src/config/: settings.py  urls.py
src/config/settings/: base.py  local.py
src/post/: urls.py
src/posts/: forms.py  models.py  urls.py  views.py
src/posts/migrations/: 0001_initial.py  0002_alter_post_location_alter_post_photo.py  0003_alter_post_options_alter_post_photo.py
src/static/: jquery-3.7.1.js
src/templates/: base.html  base_form.html  base_layout.html  index.html  sidebar.html
src/templates/accounts/: login_form.html  password_change_form.html  profile_edit_form.html  signup_form.html
src/templates/posts/: base_post_detail.html  post_create_form.html  post_detail.html  post_list.html  post_update_form.html
src/templates/user/: profile.html  userpage.html
